--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicationDay1">
         <activity
-            android:name=".MainActivity6"
+            android:name=".MainActivity7"
             android:exported="true" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+            <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity5"
+            android:name=".MainActivity6"
             android:exported="true"/>
+        <activity
+            android:name=".MainActivity5"
+            android:exported="true" />
         <activity
             android:name=".MainActivity4"
             android:exported="false" />
